Refactor execution counts and improve translation output formatting in NLG metrics notebook

--- a/Lab1_NLG_metrics.ipynb
+++ b/Lab1_NLG_metrics.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "cec25c84",
    "metadata": {},
    "outputs": [],
@@ -24,19 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "d7ef3d06",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bronzini/repositories/FM_2025/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import evaluate"
    ]
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "9e538935",
    "metadata": {},
    "outputs": [
@@ -89,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "0ca8e5ac",
    "metadata": {},
    "outputs": [
@@ -131,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "5b327ebd",
    "metadata": {},
    "outputs": [
@@ -163,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "7c097bbd",
    "metadata": {},
    "outputs": [],
@@ -173,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "edea872f",
    "metadata": {},
    "outputs": [],
@@ -183,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "58249acf",
    "metadata": {},
    "outputs": [
@@ -215,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "6d4d5ebb",
    "metadata": {},
    "outputs": [],
@@ -225,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "94ed1219",
    "metadata": {},
    "outputs": [],
@@ -239,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "id": "1cc2f4ce",
    "metadata": {},
    "outputs": [
@@ -290,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "id": "cf94a1b2",
    "metadata": {},
    "outputs": [],
@@ -308,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "d29e8150",
    "metadata": {},
    "outputs": [
@@ -335,17 +326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "7132adba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = \"You are a professional translator. Your task is to translate the following text into Italian. Provide only the translation, without explanations or additional commentary.\\nTEXT:\""
+    "mt_task = \"You are a professional translator. Your task is to translate the following text into Italian. Provide only the translation, without explanations or additional commentary.\\nTEXT:\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "871fd20e",
    "metadata": {},
    "outputs": [
@@ -354,25 +345,25 @@
      "output_type": "stream",
      "text": [
       "Input: \"Life is full of surprises.\"\n",
-      "Output: \"Vita è piena di sorprese.\"\n",
+      "Output: \"La vita è piena di sorprendenti.\"\n",
       "\n",
       "Input: \"They played soccer last weekend.\"\n",
-      "Output: \"1953 si giocavano a calcio la settimana precedente.\"\n",
+      "Output: \"Filiali hanno partecipato al calcio del Weekend ultimo.\"\n",
       "\n",
       "Input: \"We are going to the park later.\"\n",
-      "Output: \"Vadremo al parco dopo.\"\n",
+      "Output: \"1. Siamo andate al parco dopo.\"\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "docs = ['Life is full of surprises.', 'They played soccer last weekend.', 'We are going to the park later.']\n",
+    "mt_docs = ['Life is full of surprises.', 'They played soccer last weekend.', 'We are going to the park later.']\n",
     "\n",
     "outputs = []\n",
-    "for doc in docs:\n",
+    "for doc in mt_docs:\n",
     "    \n",
     "    # Create the prompt by combining the task description with the document\n",
-    "    prompt = f\"{task} {doc}\\nTRANSLATION: \"\n",
+    "    prompt = f\"{mt_task} {doc}\\nTRANSLATION: \"\n",
     "    \n",
     "    # Generate the output using the pipeline\n",
     "    result = pipe([prompt], return_full_text = False)\n",
@@ -396,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "430228df",
    "metadata": {},
    "outputs": [
@@ -405,32 +396,33 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "LLM OUTPUT: \"Vita è piena di sorprese.\" <<-->> TARGET: \"La vita è piena di sorprese.\"\n",
-      "--> BLEU Score: 64.32\n",
-      "--> BERTScore (F1): 0.96\n",
-      "--> Cosine Similarity: 0.97\n",
+      "LLM OUTPUT: \"La vita è piena di sorprendenti.\" <<-->> TARGET: \"La vita è piena di sorprese.\"\n",
+      "--> BLEU Score: 64.3%\n",
+      "--> BERTScore (F1): 0.91\n",
+      "--> Cosine Similarity: 0.94\n",
       "\n",
-      "LLM OUTPUT: \"1953 si giocavano a calcio la settimana precedente.\" <<-->> TARGET: \"Hanno giocato a calcio lo scorso fine settimana.\"\n",
-      "--> BLEU Score: 0.00\n",
-      "--> BERTScore (F1): 0.78\n",
-      "--> Cosine Similarity: 0.68\n",
+      "LLM OUTPUT: \"Filiali hanno partecipato al calcio del Weekend ultimo.\" <<-->> TARGET: \"Hanno giocato a calcio lo scorso fine settimana.\"\n",
+      "--> BLEU Score: 0.0%\n",
+      "--> BERTScore (F1): 0.67\n",
+      "--> Cosine Similarity: 0.61\n",
       "\n",
-      "LLM OUTPUT: \"Vadremo al parco dopo.\" <<-->> TARGET: \"Andremo al parco più tardi.\"\n",
-      "--> BLEU Score: 0.00\n",
-      "--> BERTScore (F1): 0.79\n",
-      "--> Cosine Similarity: 0.67\n"
+      "LLM OUTPUT: \"1. Siamo andate al parco dopo.\" <<-->> TARGET: \"Andremo al parco più tardi.\"\n",
+      "--> BLEU Score: 0.0%\n",
+      "--> BERTScore (F1): 0.72\n",
+      "--> Cosine Similarity: 0.58\n"
      ]
     }
    ],
    "source": [
-    "targets = [\"La vita è piena di sorprese.\", \"Hanno giocato a calcio lo scorso fine settimana.\", \"Andremo al parco più tardi.\"]\n",
-    "for output, target in zip(outputs, targets):\n",
+    "mt_targets = [\"La vita è piena di sorprese.\", \"Hanno giocato a calcio lo scorso fine settimana.\", \"Andremo al parco più tardi.\"]\n",
+    "stats = {}\n",
+    "for output, target in zip(outputs, mt_targets):\n",
     "    \n",
     "    print(f'\\nLLM OUTPUT: \"{output}\" <<-->> TARGET: \"{target}\"')\n",
     "    \n",
     "    # Lexical metrics (ngram-based)\n",
     "    bleu_results = bleu_metric.compute(predictions=[output], references=[target])\n",
-    "    print(f\"--> BLEU Score: {bleu_results['bleu'] * 100:.2f}\")\n",
+    "    print(f\"--> BLEU Score: {bleu_results['bleu']:.1%}\")\n",
     "    \n",
     "    # Semantic metrics (embedding-based)\n",
     "    bert_result = bertscore.compute(predictions=[output], references=[target], model_type=\"bert-base-uncased\")\n",
@@ -438,6 +430,8 @@
     "     \n",
     "    cosine_similarity = embedding_model.similarity(embedding_model.encode(target), embedding_model.encode(output)).squeeze()\n",
     "    print(f\"--> Cosine Similarity: {cosine_similarity:.2f}\")\n",
+    "    \n",
+    "    stats[target] = {'blue': bleu_results['bleu'], 'bertscore': bert_result['f1'][0], 'cosine': cosine_similarity}\n",
     "    "
    ]
   },
@@ -454,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "id": "c6ac5143",
    "metadata": {},
    "outputs": [],
@@ -482,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "911f7039",
    "metadata": {},
    "outputs": [
@@ -491,16 +485,16 @@
      "output_type": "stream",
      "text": [
       "QUESTION: \"How do asset prices generally move in relation to interest rates?\"\n",
-      "OUTPUT: \"inversely to interest rates\"\n",
+      "LLM OUTPUT: \"inversely to interest rates\"\n",
       "\n",
       "QUESTION: \"How can climate changes be determined from soil?\"\n",
-      "OUTPUT: \"Plant responses to climate and other environmental changes can inform our understanding of how these changes affect ecosystem function and productivity. For example, plant phenology can be a useful proxy for temperature in historical climatology, and the biological impact of climate change and global warming. Palynology, the analysis of fossil pollen deposits in sediments from thousands or millions of years ago allows the reconstruction of past climates. Estimates of atmospheric CO2 concentrations since the Palaeozoic have been obtained from stomatal densities and the leaf shapes and sizes of ancient land plants. Ozone depletion can expose plants to higher levels of ultraviolet radiation-B (UV-B), resulting in lower growth rates. Moreover, information from studies of community ecology, plant systematics, and taxonomy is essential to understanding vegetation change, habitat destruction and species extinction.\"\n",
+      "LLM OUTPUT: \"Plant responses to climate and other environmental changes can inform our understanding of how these changes affect ecosystem function and productivity. For example, plant phenology can be a useful proxy for temperature in historical climatology, and the biological impact of climate change and global warming. Palynology, the analysis of fossil pollen deposits in sediments from thousands or millions of years ago allows the reconstruction of past climates. Estimates of atmospheric CO2 concentrations since the Palaeozoic have been obtained from stomatal densities and the leaf shapes and sizes of ancient land plants. Ozone depletion can expose plants to higher levels of ultraviolet radiation-B (UV-B), resulting in lower growth rates. Moreover, information from studies of community ecology, plant systematics, and taxonomy is essential to understanding vegetation change, habitat destruction and species extinction.\"\n",
       "\n",
       "QUESTION: \"In what year did Miami's government declare bankruptcy?\"\n",
-      "OUTPUT: \"2001\"\n",
+      "LLM OUTPUT: \"2001\"\n",
       "\n",
       "QUESTION: \"Which English philosopher wrote Leviathan in 1651?\"\n",
-      "OUTPUT: \"Leviathan\"\n",
+      "LLM OUTPUT: \"Thomas Hobbes\"\n",
       "\n"
      ]
     }
@@ -520,7 +514,7 @@
     "    \n",
     "    # Clean up the output by removing whitespaces and newlines\n",
     "    generated_text = generated_text.split(\"\\n\")[0].strip()\n",
-    "    print(f'QUESTION: \"{doc[\"question\"]}\"\\nOUTPUT: \"{generated_text}\"\\n')\n",
+    "    print(f'QUESTION: \"{doc[\"question\"]}\"\\nLLM OUTPUT: \"{generated_text}\"\\n')\n",
     "        \n",
     "    # Store the generated output\n",
     "    outputs.append(generated_text)"
@@ -528,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "59746771",
    "metadata": {},
    "outputs": [
@@ -558,18 +552,18 @@
       "--> BERTScore (F1): 1.00\n",
       "--> Cosine Similarity: 1.00\n",
       "\n",
-      "LLM OUTPUT: \"Leviathan\" <<-->> TARGET: \"Thomas Hobbes\"\n",
+      "LLM OUTPUT: \"Thomas Hobbes\" <<-->> TARGET: \"Thomas Hobbes\"\n",
       "--> BLEU Score: 0.00\n",
-      "--> Exact Match (EM): False\n",
-      "--> Is mentioned: False\n",
-      "--> BERTScore (F1): 0.44\n",
-      "--> Cosine Similarity: 0.27\n"
+      "--> Exact Match (EM): True\n",
+      "--> Is mentioned: True\n",
+      "--> BERTScore (F1): 1.00\n",
+      "--> Cosine Similarity: 1.00\n"
      ]
     }
    ],
    "source": [
-    "targets = [doc[\"answer\"] for doc in squad_docs]\n",
-    "for output, target in zip(outputs, targets):\n",
+    "squad_targets = [doc[\"answer\"] for doc in squad_docs]\n",
+    "for output, target in zip(outputs, squad_targets):\n",
     "    \n",
     "    print(f'\\nLLM OUTPUT: \"{output}\" <<-->> TARGET: \"{target}\"')\n",
     "    \n",
@@ -597,9 +591,99 @@
    "metadata": {},
    "source": [
     "# Prompt engineering\n",
-    "1. Zero-shot (as above)\n",
-    "2. In-Context Learning (ICL; include examples in the prompts)\n",
-    "3. Chain-of-Thought (CoT)"
+    "From *zero-shot* (as above) to *In-Context Learning* (ICL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "259df928",
+   "metadata": {},
+   "source": [
+    "### In-context Learning: include examples in the prompt to guide the model's behavior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "47ae3b4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "examples = [\n",
+    "  ('Rome is the capital of Italy.','Roma è la capitale d’Italia.'),\n",
+    "  ('Where is the train station?', 'Dove si trova la stazione dei treni?'),\n",
+    "  ('We are going to the market tomorrow, do you want to come with us?', 'Andremo al mercato domani, vuoi venire con noi?'),\n",
+    "]\n",
+    "\n",
+    "prompt = f\"{mt_task} {doc}\\nTRANSLATION: \"\n",
+    "main_conversation = [\n",
+    "  {\"role\": \"user\", \"content\": f\"{mt_task} {examples[0][0]}\\nTRANSLATION:\"},\n",
+    "  {\"role\": \"assistant\", \"content\": examples[0][1]},\n",
+    "  {\"role\": \"user\", \"content\": f\"{examples[1][0]}\\nTRANSLATION:\"},\n",
+    "  {\"role\": \"assistant\", \"content\": examples[1][1]},\n",
+    "  {\"role\": \"user\", \"content\": f\"{examples[2][0]}\\nTRANSLATION:\"},\n",
+    "  {\"role\": \"assistant\", \"content\": examples[2][1]},\n",
+    "]\n",
+    "\n",
+    "outputs = []\n",
+    "for doc in mt_docs:\n",
+    "    \n",
+    "    # Copy the main conversation and append the new user input\n",
+    "    conversation = main_conversation.copy()\n",
+    "    conversation.append({\"role\": \"user\", \"content\": f\"{doc}\\nTRANSLATION:\"})\n",
+    "    \n",
+    "    result = pipe(conversation, return_full_text = False)\n",
+    "    generated_text = result[0]['generated_text']\n",
+    "    \n",
+    "    # Clean up the output by removing whitespaces and newlines\n",
+    "    generated_text = generated_text.split(\"\\n\")[0].strip()\n",
+    "        \n",
+    "    # Store the generated output\n",
+    "    outputs.append(generated_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "8d91f37b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "LLM OUTPUT: \"La vita è piena di sorprise.\" <<-->> TARGET: \"La vita è piena di sorprese.\"\n",
+      "--> BLEU Score: 64.3% --> Δ: 0.0%\n",
+      "--> BERTScore (F1): 0.93 --> Δ: 0.02\n",
+      "--> Cosine Similarity: 0.95  --> Δ: 0.00\n",
+      "\n",
+      "LLM OUTPUT: \"Entrarono a calcio l'ultimo weekend.\" <<-->> TARGET: \"Hanno giocato a calcio lo scorso fine settimana.\"\n",
+      "--> BLEU Score: 0.0% --> Δ: 0.0%\n",
+      "--> BERTScore (F1): 0.68 --> Δ: 0.00\n",
+      "--> Cosine Similarity: 0.57  --> Δ: -0.04\n",
+      "\n",
+      "LLM OUTPUT: \"Andremo al parco dopo.\" <<-->> TARGET: \"Andremo al parco più tardi.\"\n",
+      "--> BLEU Score: 0.0% --> Δ: 0.0%\n",
+      "--> BERTScore (F1): 0.86 --> Δ: 0.15\n",
+      "--> Cosine Similarity: 0.78  --> Δ: 0.20\n"
+     ]
+    }
+   ],
+   "source": [
+    "for output, target in zip(outputs, mt_targets):\n",
+    "    print(f'\\nLLM OUTPUT: \"{output}\" <<-->> TARGET: \"{target}\"')\n",
+    "    \n",
+    "    # Lexical metrics (ngram-based)\n",
+    "    bleu_results = bleu_metric.compute(predictions=[output], references=[target])\n",
+    "    print(f\"--> BLEU Score: {bleu_results['bleu']:.1%} --> Δ: {bleu_results['bleu'] - stats[target]['blue']:.1%}\")\n",
+    "\n",
+    "    # Semantic metrics (embedding-based)\n",
+    "    bert_result = bertscore.compute(predictions=[output], references=[target], model_type=\"bert-base-uncased\")\n",
+    "    print(f\"--> BERTScore (F1): {bert_result['f1'][0]:.2f} --> Δ: {bert_result['f1'][0]- stats[target]['bertscore']:.2f}\")\n",
+    "     \n",
+    "    cosine_similarity = embedding_model.similarity(embedding_model.encode(target), embedding_model.encode(output)).squeeze()\n",
+    "    print(f\"--> Cosine Similarity: {cosine_similarity:.2f}  --> Δ: {cosine_similarity- stats[target]['cosine']:.2f}\")"
    ]
   }
  ],
