Update README to include course overview, notebook details, and contribution guidelines

--- a/Lab1_NLG_metrics.ipynb
+++ b/Lab1_NLG_metrics.ipynb
@@ -109,7 +109,7 @@
    "source": [
     "## Semantic-based similarity (embedding-based comparison)\n",
     "1. [BertSCORE](https://medium.com/@abonia/bertscore-explained-in-5-minutes-0b98553bfb71)\n",
-    "2. Cosine similarity "
+    "2. [Cosine similarity](https://spencerporter2.medium.com/understanding-cosine-similarity-and-word-embeddings-dbf19362a3c)"
    ]
   },
   {
