Reorganize semantic similarity section in NLG metrics notebook: move BertSCORE to follow Cosine similarity and add corresponding code cell for BERTScore evaluation

--- a/Lab1_NLG_metrics.ipynb
+++ b/Lab1_NLG_metrics.ipynb
@@ -108,40 +108,8 @@
    "metadata": {},
    "source": [
     "## Semantic-based similarity (embedding-based comparison)\n",
-    "1. [BertSCORE](https://medium.com/@abonia/bertscore-explained-in-5-minutes-0b98553bfb71)\n",
-    "2. [Cosine similarity](https://spencerporter2.medium.com/understanding-cosine-similarity-and-word-embeddings-dbf19362a3c)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0fe60319",
-   "metadata": {},
-   "source": [
-    "### BertSCORE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "5b327ebd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"The sun set behind the hills\" <<-->> \"The moon set behind the hills\"\n",
-      "--> BERTScore (F1): 0.92\n"
-     ]
-    }
-   ],
-   "source": [
-    "bertscore = evaluate.load(\"bertscore\")\n",
-    "\n",
-    "# BERTScore\n",
-    "bert_result = bertscore.compute(predictions=candidate, references=reference, model_type=\"bert-base-uncased\")\n",
-    "print(f'\"{reference[0]}\" <<-->> \"{candidate[0]}\"')\n",
-    "print(f\"--> BERTScore (F1): {bert_result['f1'][0]:.2f}\")"
+    "1. [Cosine similarity](https://spencerporter2.medium.com/understanding-cosine-similarity-and-word-embeddings-dbf19362a3c)\n",
+    "2. [BertSCORE](https://medium.com/@abonia/bertscore-explained-in-5-minutes-0b98553bfb71)\n"
    ]
   },
   {
@@ -194,6 +162,38 @@
     "similarity = embedding_model.similarity(referece_embedding, candidate_embedding)\n",
     "print(f'\"{reference[0]}\" <<-->> \"{candidate[0]}\"')\n",
     "print(f\"--> Cosine Similarity: {similarity[0][0]:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fe60319",
+   "metadata": {},
+   "source": [
+    "### BertSCORE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5b327ebd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"The sun set behind the hills\" <<-->> \"The moon set behind the hills\"\n",
+      "--> BERTScore (F1): 0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "bertscore = evaluate.load(\"bertscore\")\n",
+    "\n",
+    "# BERTScore\n",
+    "bert_result = bertscore.compute(predictions=candidate, references=reference, model_type=\"bert-base-uncased\")\n",
+    "print(f'\"{reference[0]}\" <<-->> \"{candidate[0]}\"')\n",
+    "print(f\"--> BERTScore (F1): {bert_result['f1'][0]:.2f}\")"
    ]
   },
   {
