--- a/Lab4_agents.ipynb
+++ b/Lab4_agents.ipynb
@@ -66,7 +66,7 @@
         "    - Create an account for the Hugging Face platform: [huggingface.co/join](https://huggingface.co/join)\n",
         "    - Get the API key from dashboard: [huggingface.co/docs/hub/en/security-tokens](https://huggingface.co/docs/hub/en/security-tokens)\n",
         "2. via [*OpenAI API*](https://auth.openai.com)\n",
-        "    - Create a new OpenAI account (free credits): [auth.openai.com/create-account](https://auth.openai.com/create-account)\n",
+        "    - Create a new OpenAI account (free credits for new accounts): [auth.openai.com/create-account](https://auth.openai.com/create-account)\n",
         "    - Generate the API key from the dashboard: [platform.openai.com/api-keys](https://platform.openai.com/api-keys)"
       ]
     },
