--- a/Lab4_agents.ipynb
+++ b/Lab4_agents.ipynb
@@ -789,13 +789,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 591
+          "height": 626
         },
         "id": "WpDoJIU1Ko7Q",
         "outputId": "3cc39362-15eb-4fcc-a8b9-da8bc711716d"
       },
       "id": "WpDoJIU1Ko7Q",
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,6 +818,22 @@
             ]
           },
           "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Keyboard interruption in main thread... closing server.\n",
+            "Killing tunnel 127.0.0.1:7860 <> https://f7a85b973db3b3f93a.gradio.live\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 24
         }
       ]
     }
