--- a/Lab4_agents.ipynb
+++ b/Lab4_agents.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "1dda4be8",
       "metadata": {
         "id": "1dda4be8"
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "f96e2cee",
       "metadata": {
         "id": "f96e2cee"
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "3c13a9de",
       "metadata": {
         "colab": {
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "1fc4d344",
       "metadata": {
         "id": "1fc4d344"
@@ -161,19 +161,24 @@
         "id": "f7d0becb"
       },
       "source": [
+        "# Get the API token\n",
+        "1. Create an account on [Tavily platform](https://app.tavily.com/home)\n",
+        "2. Create a new API key: [https://app.tavily.com/home](https://app.tavily.com/home)\n",
+        "\n",
+        "\n",
         "# Initialize the tool\n",
         "This code demonstrates how to use the `TavilySearch` tool from the `langchain_tavily` package to perform a web search within a LangChain workflow.\n",
-        "1. It imports the TavilySearch class, which is a tool designed to query the Tavily Search API and return structured search results, such as URLs, snippets, and optionally images or answers.\n",
-        "2. The invoke method is then called with the query `\"What is Italy’s current public debt?\"`.\n",
+        "2. It imports the TavilySearch class, which is a tool designed to query the Tavily Search API and return structured search results, such as URLs, snippets, and optionally images or answers.\n",
+        "3. The invoke method is then called with the query `\"What is Italy’s current public debt?\"`.\n",
         "    - This method sends the query to the Tavily API and returns the search results as a dictionary containing information such as the original query, a list of result items (with titles, URLs, and content snippets), and possibly other metadata.\n",
-        "3. The results are printed to the output pane, allowing you to inspect the returned data.\n",
+        "4. The results are printed to the output pane, allowing you to inspect the returned data.\n",
         "\n",
         "The code also shows how to organize tools for later use by placing the search tool into a list called tools. This is useful when building more complex agent workflows that may use multiple tools for different tasks."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "28d76fe7",
       "metadata": {
         "colab": {
@@ -238,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "cd983b4c",
       "metadata": {
         "id": "cd983b4c"
@@ -260,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "06d66f60",
       "metadata": {
         "id": "06d66f60"
@@ -275,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "29560cf9",
       "metadata": {
         "colab": {
@@ -323,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "84b98c8b",
       "metadata": {
         "id": "84b98c8b"
@@ -338,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "82852a2b",
       "metadata": {
         "colab": {
@@ -410,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "7bb5f20a",
       "metadata": {
         "id": "7bb5f20a"
@@ -447,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "29b01cad",
       "metadata": {
         "id": "29b01cad"
@@ -462,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "d88a89a4",
       "metadata": {
         "id": "d88a89a4"
@@ -474,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "b030c85c",
       "metadata": {
         "colab": {
@@ -544,7 +549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "9ce81553",
       "metadata": {
         "id": "9ce81553"
@@ -577,7 +582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "8e662af4",
       "metadata": {
         "id": "8e662af4"
@@ -592,7 +597,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "48fb5c67",
       "metadata": {
         "colab": {
@@ -679,7 +684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "63ea2a84",
       "metadata": {
         "id": "63ea2a84"
@@ -696,7 +701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "ad4b11d8",
       "metadata": {
         "id": "ad4b11d8"
@@ -731,7 +736,7 @@
         "id": "QbTg_AKMiGro"
       },
       "id": "QbTg_AKMiGro",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -754,7 +759,7 @@
         "id": "DPFkljz7M4EB"
       },
       "id": "DPFkljz7M4EB",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -795,7 +800,7 @@
         "outputId": "3cc39362-15eb-4fcc-a8b9-da8bc711716d"
       },
       "id": "WpDoJIU1Ko7Q",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
