--- a/Lab4_agents.ipynb
+++ b/Lab4_agents.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "1dda4be8",
       "metadata": {
         "id": "1dda4be8"
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "f96e2cee",
       "metadata": {
         "id": "f96e2cee"
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "3c13a9de",
       "metadata": {
         "colab": {
@@ -126,9 +126,8 @@
         "else:\n",
         "    llm_model = ChatOpenAI(\n",
         "        base_url=\"https://openrouter.ai/api/v1\",\n",
-        "        model=\"meta-llama/llama-3.3-8b-instruct:free\",\n",
-        "        # (1) mistralai/mistral-small-3.2-24b-instruct:free (1) nvidia/nemotron-nano-9b-v2:free\n",
-        "        api_key=\"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\")\n",
+        "        model=\"nvidia/nemotron-nano-9b-v2:free\", # (1) mistralai/mistral-small-3.2-24b-instruct:free (1) nvidia/nemotron-nano-9b-v2:free\n",
+        "        api_key=\"\")\n",
         "\n",
         "    print(f\"Cloud inference ({llm_model.openai_api_base}): model: \\\"{llm_model.model_name}\\\"\")"
       ]
@@ -145,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "1fc4d344",
       "metadata": {
         "id": "1fc4d344"
@@ -188,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "28d76fe7",
       "metadata": {
         "colab": {
@@ -253,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "cd983b4c",
       "metadata": {
         "id": "cd983b4c"
@@ -275,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "06d66f60",
       "metadata": {
         "id": "06d66f60"
@@ -290,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "29560cf9",
       "metadata": {
         "colab": {
@@ -345,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "84b98c8b",
       "metadata": {
         "id": "84b98c8b"
@@ -360,7 +359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "82852a2b",
       "metadata": {
         "colab": {
@@ -457,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "7bb5f20a",
       "metadata": {
         "id": "7bb5f20a"
@@ -494,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "29b01cad",
       "metadata": {
         "id": "29b01cad"
@@ -509,7 +508,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "d88a89a4",
       "metadata": {
         "id": "d88a89a4"
@@ -521,7 +520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "b030c85c",
       "metadata": {
         "colab": {
@@ -590,7 +589,7 @@
         "id": "pCP6rvVXmqz5"
       },
       "id": "pCP6rvVXmqz5",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -605,7 +604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "9ce81553",
       "metadata": {
         "id": "9ce81553"
@@ -638,7 +637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "8e662af4",
       "metadata": {
         "id": "8e662af4"
@@ -653,7 +652,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "48fb5c67",
       "metadata": {
         "colab": {
@@ -737,7 +736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "63ea2a84",
       "metadata": {
         "id": "63ea2a84"
@@ -754,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "ad4b11d8",
       "metadata": {
         "id": "ad4b11d8"
@@ -789,7 +788,7 @@
         "id": "QbTg_AKMiGro"
       },
       "id": "QbTg_AKMiGro",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -812,7 +811,7 @@
         "id": "DPFkljz7M4EB"
       },
       "id": "DPFkljz7M4EB",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -853,7 +852,7 @@
         "outputId": "af91272a-6ee1-4f37-ff5a-6723a6a26a9f"
       },
       "id": "WpDoJIU1Ko7Q",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
